<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">DataTech Portal</string>
  <string name="customer_editLabel">Edit Customer</string>
  <string name="customer_searchLabel">Search Customer</string>
  <string name="customer_listLabel">List All Customers</string>

  <string name="string_cusData">Customer Database</string>
  <string name="string_jobData">Job Database</string>
  <string name="string_invData">Inventory Database</string>
  <string name="string_companyPro">Company Profile</string>
  <string name="string_funds">Funds</string>
  <string name="string_toDo">To Do</string>

  <string name="string_customerID">Customer ID</string>
  <string name="string_firstName">First Name</string>
  <string name="string_lastName">Last Name</string>
  <string name="string_email">Email</string>
  <string name="string_phone">Phone</string>
  <string name="string_street">Street</string>
  <string name="string_city">City</string>
  <string name="string_state">State</string>
  <string name="string_zipCode">Zip Code</string>
  <string name="string_searchParam">Enter One Search Parameter</string>
  <string name="string_searchInstr">Choose search parameter type from drop down</string>

  <string name="buttonText_add">ADD</string>
  <string name="buttonText_search">SEARCH</string>
  <string name="buttonText_update">UPDATE</string>
  <string name="buttonText_delete">DELETE</string>
  <string name="buttonText_edit">EDIT</string>
  <string name="buttonText_cancel" tools:ignore="ButtonCase">CANCEL</string>
  <string name="buttonText_customerAddEdit">Add/Edit/Delete</string>
  <string name="buttonText_customerSearch">Search Customer</string>
  <string name="buttonText_customerList">List All Customers</string>
  <string name="buttonText_toDoAdd">Add</string>
  <string name="buttonText_FundsNew">New Transaction</string>

  <string name="button_test">Test Button</string> <!--not needed-->
  <string name="input_text">Text Field</string> <!--not needed-->
  <string name="input_float">Number Field</string>
  <string name="test">test</string>
  <string name="tv_total_amt_rec">Total Amount Received:</string>
  <string name="et_total_amt_rec">Enter Total Amount Received</string>
  <string name="tv_fuel_cost">Fuel Cost:</string>
  <string name="et_enter_fuel_cost">Enter fuel cost</string>
  <string name="tv_inventory_cost">Inventory Cost:</string>
  <string name="btn_save">Save</string>
  <string name="btn_cancel">Cancel</string>
  <string name="et_enter_inventory_cost">Enter Inventory Expenses:</string>
  <string name="enter_misc_acct_per">Enter Misc Acct. Percentage</string>
  <string name="tv_misc_acct_per">Misc Acct %:</string>
  <string name="transaction_date">Transaction Date:</string>
  <string name="transaction_type">Transaction Type:</string>
  <string name="customer_name">Customer Name:</string>
  <string name="tim_owed">Tim Owed:</string>
  <string name="dave_owed">Dave Owed:</string>
  <string name="inventory_acct">Inventory Acct:</string>
  <string name="fuel_acct">Fuel Acct:</string>
  <string name="misc_acct">Misc Acct:</string>
  <string name="notes">Notes</string>
  <string name="priority">Priority #</string>
  <string name="enter_a_description">Enter a description</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="description">Description:</string>
  <string name="from_acct">From Acct:</string>
  <string name="select_to_acct">Select To Acct:</string>
  <string name="add">Add</string>
  <string name="amount">Payment Amount:</string> <!--not needed-->
</resources>
