<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <EditText
      android:id="@+id/customerId_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_customerID"
      android:inputType="number"/>

  <EditText
      android:id="@+id/customerFName_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_firstName"
      android:inputType="text"/>

  <EditText
      android:id="@+id/customerLName_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_lastName"
      android:inputType="text"/>

  <EditText
      android:id="@+id/customerEmail_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_email"
      android:inputType="textEmailAddress"/>

  <EditText
      android:id="@+id/customerPhone_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_phone"
      android:inputType="phone"/>

  <EditText
      android:id="@+id/customerStreet_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_street"
      android:inputType="text"/>

  <EditText
      android:id="@+id/customerCity_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_city"
      android:inputType="text"/>

  <EditText
      android:id="@+id/customerState_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_state"
      android:inputType="text"/>

  <EditText
      android:id="@+id/customerZipcode_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/string_zipCode"
      android:inputType="number"/>
</LinearLayout>