<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nedatatech.datatechportal.ToDoActivity.ToDoAdd">

  <TextView
      android:id="@+id/tvTotalRec"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_total_amt_rec"
      android:layout_marginEnd="0dp"
      android:layout_marginStart="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/etTotalRec"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/etTotalRec"
      android:layout_marginBottom="8dp"/>

  <EditText
      android:id="@+id/etTotalRec"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/et_total_amt_rec"
      android:inputType="number"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="37dp"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintLeft_toRightOf="@+id/tvTotalRec"
      android:layout_marginLeft="8dp"/>

  <TextView
      android:id="@+id/tvFuel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_fuel_cost"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/etFuel"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/etFuel"
      android:layout_marginBottom="8dp"
      app:layout_constraintRight_toLeftOf="@+id/etFuel"
      android:layout_marginRight="8dp"/>

  <EditText
      android:id="@+id/etFuel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/et_enter_fuel_cost"
      android:inputType="number"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="97dp"
      app:layout_constraintTop_toBottomOf="@+id/etTotalRec"
      />

  <TextView
      android:id="@+id/tvInventoryCost"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_inventory_cost"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/etInventoryCost"
      android:layout_marginTop="0dp"
      app:layout_constraintBottom_toBottomOf="@+id/etInventoryCost"
      android:layout_marginBottom="8dp"
      app:layout_constraintRight_toLeftOf="@+id/etInventoryCost"
      android:layout_marginRight="8dp"/>

  <EditText
      android:id="@+id/etInventoryCost"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/et_enter_inventory_cost"
      android:inputType="number"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/etFuel"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="-8dp"
      app:layout_constraintVertical_bias="0.193"/>

  <TextView
      android:id="@+id/tvMiscAcctPercentage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_misc_acct_per"
      app:layout_constraintBottom_toBottomOf="@+id/etMiscAcctPercentage"
      android:layout_marginBottom="8dp"
      app:layout_constraintTop_toTopOf="@+id/etMiscAcctPercentage"
      android:layout_marginTop="8dp"
      app:layout_constraintRight_toLeftOf="@+id/etMiscAcctPercentage"
      android:layout_marginRight="8dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <EditText
      android:id="@+id/etMiscAcctPercentage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number"
      android:hint="@string/enter_misc_acct_per"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/etInventoryCost"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"
      app:layout_constraintVertical_bias="0.233"
      android:layout_marginEnd="8dp"
      app:layout_constraintRight_toRightOf="parent"/>

  <Button
      android:id="@+id/buttonSave"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:text="@string/btn_save"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/buttonCancel"
      android:layout_marginRight="8dp"
      app:layout_constraintHorizontal_bias="0.415"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"/>

  <Button
      android:id="@+id/buttonCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_cancel"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginEnd="62dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"/>





</android.support.constraint.ConstraintLayout>
