<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nedatatech.datatechportal.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

  <LinearLayout
      android:layout_width="395dp"
      android:layout_height="587dp"
      android:orientation="vertical"
      android:padding="20dp"
      android:weightSum="1"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/buttonCustomer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:text="@string/string_cusData"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/buttonJob"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:text="@string/string_jobData"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonInventory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:text="@string/string_invData"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonCompany"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:text="@string/string_companyPro"
        android:textAlignment="center"
        android:textStyle="bold"/>
  </LinearLayout>
</android.support.constraint.ConstraintLayout>
