<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nedatatech.datatechportal.todoactivity.ToDoAdd">

  <EditText
      android:id="@+id/editTextNotes"
      android:layout_width="133dp"
      android:layout_height="41dp"
      android:ems="10"
      android:hint="@string/notes"
      android:textAlignment="center"
      android:inputType="textMultiLine"
      android:layout_marginStart="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginEnd="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.506"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/buttonSave"/>

  <NumberPicker
      android:id="@+id/npPriority"
      android:layout_width="70dp"
      android:layout_height="0dp"
      android:ems="10"
      android:inputType="number"
      android:hint="@string/priority"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"/>

  <EditText
      android:id="@+id/editTextDescription"
      android:layout_width="127dp"
      android:layout_height="37dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/enter_a_description"
      android:inputType="textPersonName"
      android:textAlignment="center"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/npPriority"/>

  <Button
      android:id="@+id/buttonSave"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:text="@string/save"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/buttonCancel"
      android:layout_marginRight="8dp"
      app:layout_constraintHorizontal_bias="0.415"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"/>

  <Button
      android:id="@+id/buttonCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginEnd="62dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"/>

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/priority"
      android:layout_centerVertical="true"
      app:layout_constraintRight_toLeftOf="@+id/npPriority"
      android:layout_marginRight="8dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/npPriority"
      android:layout_marginTop="8dp"
      app:layout_constraintHorizontal_bias="0.505"
      app:layout_constraintBottom_toBottomOf="@+id/npPriority"
      android:layout_marginBottom="8dp"/>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/description"
      app:layout_constraintRight_toLeftOf="@+id/editTextDescription"
      android:layout_marginRight="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/editTextDescription"
      android:layout_marginBottom="8dp"
      app:layout_constraintTop_toTopOf="@+id/editTextDescription"
      android:layout_marginTop="8dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/notes"
      app:layout_constraintRight_toLeftOf="@+id/editTextNotes"
      android:layout_marginRight="8dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/editTextNotes"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/editTextNotes"
      android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>
